--- a/Lab_04/docker-compose.yml
+++ b/Lab_04/docker-compose.yml
@@ -3,12 +3,13 @@ services:
     image: mysql:9.0.1
     volumes:
       - db_data:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: toor
-      MYSQL_DATABASE: lab_04
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      # MYSQL_DATABASE: lab_04
+      # MYSQL_USER: user
+      # MYSQL_PASSWORD: password
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
@@ -27,8 +28,8 @@ services:
       NODE_ENV: development
       DB_HOST: db
       DB_PORT: 3306
-      DB_DATABASE: lab_04
-      DB_USER: user
+      DB_DATABASE: zad_01
+      DB_USER: zad_01
       DB_PASSWORD: password
       DB_DIALECT: mysql
     depends_on:
@@ -36,6 +37,28 @@ services:
         condition: service_healthy
     volumes:
       - ./zad_01:/usr/src/app
+      - /usr/src/app/node_modules
+  zad_03:
+    build:
+      context: ./zad_03
+    ports:
+      - 4000:3000
+    restart: always
+    networks:
+      - main
+    environment:
+      NODE_ENV: development
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_DATABASE: zad_03
+      DB_USER: zad_03
+      DB_PASSWORD: password
+      DB_DIALECT: mysql
+    depends_on:
+      db:
+        condition: service_healthy
+    volumes:
+      - ./zad_03:/usr/src/app
       - /usr/src/app/node_modules
   phpmyadmin:
     image: phpmyadmin
