--- a/Lab_04/docker-compose.yml
+++ b/Lab_04/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     volumes:
       - db_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - 3306:3306
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: toor
@@ -16,11 +18,34 @@ services:
       retries: 10
     networks:
       - main
-  zad_01:
+  # zad_01:
+  #   build:
+  #     context: ./zad_01
+  #   ports:
+  #     - 3000:3000
+  #   restart: always
+  #   networks:
+  #     - main
+  #   environment:
+  #     NODE_ENV: development
+  #     DB_HOST: db
+  #     DB_PORT: 3306
+  #     DB_DATABASE: zad_01
+  #     DB_USER: zad_01
+  #     DB_PASSWORD: password
+  #     DB_DIALECT: mysql
+  #     SECRET_KEY: sekret123
+  #   depends_on:
+  #     db:
+  #       condition: service_healthy
+  #   volumes:
+  #     - ./zad_01:/usr/src/app
+  #     - /usr/src/app/node_modules
+  zad_02:
     build:
-      context: ./zad_01
+      context: ./zad_02
     ports:
-      - 3000:3000
+      - 5000:3000
     restart: always
     networks:
       - main
@@ -28,15 +53,16 @@ services:
       NODE_ENV: development
       DB_HOST: db
       DB_PORT: 3306
-      DB_DATABASE: zad_01
-      DB_USER: zad_01
+      DB_DATABASE: zad_02
+      DB_USER: zad_02
       DB_PASSWORD: password
       DB_DIALECT: mysql
+      SECRET_KEY: sekret123
     depends_on:
       db:
         condition: service_healthy
     volumes:
-      - ./zad_01:/usr/src/app
+      - ./zad_02:/usr/src/app
       - /usr/src/app/node_modules
   zad_03:
     build:
@@ -54,6 +80,7 @@ services:
       DB_USER: zad_03
       DB_PASSWORD: password
       DB_DIALECT: mysql
+      SECRET_KEY: sekret123
     depends_on:
       db:
         condition: service_healthy
